# QxOrm

./: .gitignore  CMakeLists.txt  QxOrm.cmake  QxOrm.ebuild  QxOrm.pri  QxOrm.pro  QxOrm.sln  QxOrm.vc9.sln  QxOrm.vcproj  QxOrm.vcxproj  QxOrm.vcxproj.filters  README.md  changes.txt  readme.md
test/: CMakeLists.txt  test.sln
test/dll1/: dll1.pro  dll1.sln  dll1.vcproj
test/dll1/include/: CPerson.h  export.h  precompiled.h
test/dll1/qx/: CPerson.qx.cpp
test/dll1/src/: CPerson.cpp  main.cpp
test/dll2/: dll2.pro  dll2.sln  dll2.vcproj
test/dll2/include/: Bar.h  BaseClassTrigger.h  CTestAll.h  CUser.h  Foo.h  export.h  precompiled.h
test/dll2/qx/: Bar.qx.cpp  BaseClassTrigger.qx.cpp  CTestAll.qx.cpp  CUser.qx.cpp  Foo.qx.cpp
test/dll2/src/: Bar.cpp  BaseClassTrigger.cpp  CTestAll.cpp  CUser.cpp  Foo.cpp  main.cpp
test/exe/: exe.pro  exe.sln  exe.vcproj
test/exe/include/: export.h  precompiled.h
test/exe/src/: main.cpp
test/qxBlog/: CMakeLists.txt  qxBlog.pro  qxBlog.sln  qxBlog.sqlite  qxBlog.vcproj  qxBlog.vcxproj
test/qxBlog/include/: author.h  blog.h  category.h  comment.h  export.h  precompiled.h
test/qxBlog/src/: author.cpp  blog.cpp  category.cpp  comment.cpp  main.cpp
test/qxBlogCompositeKey/: CMakeLists.txt  qxBlog.pro  qxBlog.sln  qxBlog.vcproj  qxBlog.vcxproj
test/qxBlogCompositeKey/include/: author.h  blog.h  category.h  comment.h  export.h
test/qxBlogCompositeKey/qt/moc/: .gitignore
test/qxBlogCompositeKey/src/: author.cpp  blog.cpp  category.cpp  comment.cpp  main.cpp
test/qxBlogCpp11/: CMakeLists.txt  qxBlog.pro  qxBlog.vcproj  qxBlog.vcxproj
test/qxBlogCpp11/include/: author.h  blog.h  category.h  comment.h  precompiled.h
test/qxBlogCpp11/src/: blog.cpp  category.cpp  main.cpp
test/qxBlogModelView/: CMakeLists.txt  qxBlog.pro  qxBlog.vcproj  qxBlog.vcxproj  qxBlog.vcxproj.filters
test/qxBlogModelView/include/: author.h  blog.h  category.h  comment.h  precompiled.h
test/qxBlogModelView/include/model_view_from_qxee/: author.model_view.gen.h  blog.model_view.gen.h  category.model_view.gen.h  comment.model_view.gen.h
test/qxBlogModelView/qt/rcc/: qxBlogModelView.qrc
test/qxBlogModelView/qt/rcc/documents/: main.qml  main_qt4.qml  main_qt6.qml  main_relationship.qml  main_relationship_qt6.qml
test/qxBlogModelView/qt/rcc/src/: qrc_qxBlogModelView.cpp
test/qxBlogModelView/src/: author.cpp  blog.cpp  category.cpp  comment.cpp  main.cpp
test/qxBlogModelView/src/model_view_from_qxee/: author.model_view.gen.cpp  blog.model_view.gen.cpp  category.model_view.gen.cpp  comment.model_view.gen.cpp
test/qxBlogMongoDB/: CMakeLists.txt  qxBlog.pro  qxBlog.vcxproj  qxBlog.vcxproj.filters
test/qxBlogMongoDB/include/: TestQtProperty.h  author.h  blog.h  category.h  comment.h
test/qxBlogMongoDB/src/: TestQtProperty.cpp  author.cpp  blog.cpp  category.cpp  comment.cpp  main.cpp
test/qxBlogPImpl/: CMakeLists.txt  qxBlog.pro  qxBlog.sln  qxBlog.vcxproj  qxBlog.vcxproj.filters
test/qxBlogPImpl/include/: author.h  blog.h  category.h  comment.h
test/qxBlogPImpl/src/: author.cpp  blog.cpp  category.cpp  comment.cpp  main.cpp
test/qxBlogRestApi/: CMakeLists.txt  qxBlog.pro  qxBlog.vcxproj
test/qxBlogRestApi/include/: author.h  blog.h  category.h  comment.h
test/qxBlogRestApi/qt/rcc/: qxBlogRestApi.qrc
test/qxBlogRestApi/qt/rcc/documents/: cert_qxorm_ca.pem  cert_qxorm_server.crt  cert_qxorm_server.key  test_http_server.html  test_http_server.qml  test_http_server_qt6.qml  test_rest_api.qml  test_rest_api_qt6.qml
test/qxBlogRestApi/src/: author.cpp  blog.cpp  category.cpp  comment.cpp  main.cpp
test/qxBlog_composite_key/: qxBlog.pro  qxBlog.vcproj  qxBlog_composite_key.sqlite
test/qxBlog_composite_key/include/: blog.h  category.h  precompiled.h
test/qxBlog_composite_key/src/: main.cpp
test/qxClientServer/: CMakeLists.txt
test/qxClientServer/qxClient/: CMakeLists.txt  qxClient.pro  qxClient.sln  qxClient.vc9.sln  qxClient.vcproj  qxClient.vcxproj  qxClient.vcxproj.filters
test/qxClientServer/qxClient/include/: export.h  main_dlg.h  precompiled.h
test/qxClientServer/qxClient/qt/ui/: qxClient.ui  ui_qxClient.h
test/qxClientServer/qxClient/src/: main.cpp  main_dlg.cpp
test/qxClientServer/qxServer/: CMakeLists.txt  qxServer.pro  qxServer.sln  qxServer.vcproj  qxServer.vcxproj  qxServer.vcxproj.filters
test/qxClientServer/qxServer/include/: export.h  main_dlg.h  precompiled.h
test/qxClientServer/qxServer/qt/rcc/: _qxServer.qrc
test/qxClientServer/qxServer/src/: main.cpp  main_dlg.cpp
test/qxClientServer/qxService/: qxService.pri  qxService.sln  qxService.vcproj  qxService.vcxproj  qxService.vcxproj.filters  qxServiceServer.pro
test/qxClientServer/qxService/include/: export.h  precompiled.h
test/qxClientServer/qxService/qxServiceClient/: CMakeLists.txt
test/qxClientServer/qxService/qxServiceServer/: CMakeLists.txt
test/qxClientServer/qxService/src/: main.cpp
test/qxClientServer/qxService/tools/: build_debug.bat  build_release.bat  clean_debug.bat  clean_release.bat
test/qxDllSample/: CMakeLists.txt  test.sln
test/qxDllSample/dll1/: CMakeLists.txt  dll1.pro  dll1.sln  dll1.vcproj  dll1.vcxproj  dll1.vcxproj.filters
test/qxDllSample/dll1/include/: CPerson.h  QxPersistable.h  TestQtProperty.h  export.h  precompiled.h
test/qxDllSample/dll1/qx/: CPerson.qx.cpp
test/qxDllSample/dll1/src/: CPerson.cpp  QxPersistable.cpp  TestQtProperty.cpp  main.cpp
test/qxDllSample/dll2/: CMakeLists.txt  dll2.pro  dll2.sln  dll2.vc9.sln  dll2.vcproj  dll2.vcxproj  dll2.vcxproj.filters
test/qxDllSample/dll2/include/: Bar.h  BaseClassTrigger.h  CTestAll.h  CUser.h  Foo.h  export.h  precompiled.h
test/qxDllSample/dll2/qx/: Bar.qx.cpp  BaseClassTrigger.qx.cpp  CTestAll.qx.cpp  CUser.qx.cpp  Foo.qx.cpp
test/qxDllSample/dll2/src/: Bar.cpp  BaseClassTrigger.cpp  CTestAll.cpp  CUser.cpp  Foo.cpp  main.cpp
test/qxDllSample/exe/: CMakeLists.txt  exe.pro  exe.sln  exe.vcproj  exe.vcxproj  exe.vcxproj.filters
test/qxDllSample/exe/include/: export.h  precompiled.h
test/qxDllSample/exe/src/: main.cpp
(+874 files in other folders)
